--- a/Infrastructure.Test/packages.config
+++ b/Infrastructure.Test/packages.config
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="3.19.1" targetFramework="net451" />
-  <package id="AutoFixture.AutoMoq" version="3.19.1" targetFramework="net451" />
-  <package id="AutoFixture.Xunit" version="3.19.1" targetFramework="net451" />
-  <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
-  <package id="FluentAssertions" version="3.0.107" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net451" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Moq" version="4.2.1402.2112" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net451" />
-  <package id="structuremap" version="3.0.3.116" targetFramework="net451" />
-  <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net451" requireReinstallation="True" />
-  <package id="System.Data.SQLite.EF6" version="1.0.92.0" targetFramework="net451" requireReinstallation="True" />
-  <package id="xunit" version="1.9.2" targetFramework="net451" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net451" />
+  <package id="AutoFixture" version="3.19.1" targetFramework="net45" />
+  <package id="AutoFixture.AutoMoq" version="3.19.1" targetFramework="net45" />
+  <package id="AutoFixture.Xunit" version="3.19.1" targetFramework="net45" />
+  <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.0.107" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
+  <package id="structuremap" version="3.0.3.116" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.92.0" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
